[package]
name = "hub01-client"
version = "0.1.2"
edition = "2026"
description = "A Rust client library for interacting with the Hub01 Shop API"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/SrGnis/Hub01-Shop-API-libs"
repository = "https://github.com/SrGnis/Hub01-Shop-API-libs"
authors = ["Srgnis <srgnis@srgnis.com>"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
